feat: complete all of phase 4 with placeholders

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,1 @@
-<main class="main">
-  <ng-container *transloco="let t">
-    <h1>{{ t('home.welcome') }}</h1>
-    <p>{{ t('home.description') }}</p>
-  </ng-container>
-</main>
-<router-outlet />
+<eb-main-layout />
