--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,12 +6,56 @@
 // 2. Variables & Config (to be implemented)
 // @use 'styles/variables';
 
-// 3. Resets & Normalization (to be implemented)
-// @use 'styles/reset';
-
-// 4. Global Utilities (to be implemented)
+// 3. Global Utilities (to be implemented)
 // Global helper partials
 @use 'styles/card-helpers';
+
+// 4. Resets & Normalization
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+// Remove default margin
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
+// Set core root defaults
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+// Make images easier to work with
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+// Inherit fonts for form controls
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+// Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed
+ul[role='list'],
+ol[role='list'] {
+  list-style: none;
+}
 
 // Base styles
 html,
